Remove definition for build management from pom